--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid mx-5 my-3">
-            <a class="navbar-brand" href="http://127.0.0.1:5500/index.html"><img src="https://www.dummyimage.com/200x100/000/fff" alt="logo" width="200" height="100"></a>
+            <a class="navbar-brand ms-5" href="http://127.0.0.1:5500/index.html"><img
+                    src="https://www.dummyimage.com/200x100/000/fff" alt="logo" width="200" height="100"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -48,6 +49,36 @@
                 </form>
             </div>
         </div>
+    </nav>
+
+    <!--Navbar-2-->
+    <nav>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col bg-black py-5">
+                    <h1 class="text-white">Ez a logo helye</h1>
+                </div>
+                <div class="col bg-black d-flex align-items-center">
+                    <ul class="navbar nav text-white w-50">
+                        <li class="nav-item">Home</li>
+                        <li class="nav-item">About us</li>
+                        <li class="nav-item">References</li>
+                        <li class="nav-item">Carrier</li>
+                    </ul>
+                </div>
+                <div class="col bg-black d-flex align-items-center">
+                    <ul class="nav navbar text-white w-25">
+                        <li>FB</li>
+                        <li>Insta</li>
+                        <li>Tiktok</li>
+                    </ul>
+
+                </div>
+
+            </div>
+
+        </div>
+
     </nav>
 
 
