--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap 5 CSS (CDN) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="bs-static.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Braah+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
     <title>BS static site</title>
 </head>
 
-<body>
+<body class="bg-black">
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-css">
         <div class="container-fluid mx-5 my-3">
             <a class="navbar-brand ms-5" href="http://127.0.0.1:5500/index.html"><img
                     src="https://www.dummyimage.com/200x100/000/fff" alt="logo" width="200" height="100"></a>
@@ -53,24 +60,25 @@
 
     <!--Navbar-2-->
     <nav>
-        <div class="container-fluid">
+        <div class="container-fluid bg-body-css mt-5">
             <div class="row">
-                <div class="col bg-black py-5">
-                    <h1 class="text-white">Ez a logo helye</h1>
+                <div class="col-lg-3 py-4 ">
+                    <a class="navbar-brand" href="http://127.0.0.1:5500/index.html"><img
+                            src="https://www.dummyimage.com/200x100/000/fff" alt="logo" width="200" height="100"></a>
                 </div>
-                <div class="col bg-black d-flex align-items-center">
+                <div class="col-lg-6 d-flex align-items-center">
                     <ul class="navbar nav text-white w-50">
-                        <li class="nav-item">Home</li>
-                        <li class="nav-item">About us</li>
-                        <li class="nav-item">References</li>
-                        <li class="nav-item">Carrier</li>
+                        <li class="nav-item libre-baskerville-regular">Home</li>
+                        <li class="nav-item libre-baskerville-regular">About us</li>
+                        <li class="nav-item libre-baskerville-regular">References</li>
+                        <li class="nav-item libre-baskerville-regular">Carrier</li>
                     </ul>
                 </div>
-                <div class="col bg-black d-flex align-items-center">
+                <div class="col-lg-3 d-flex align-items-center">
                     <ul class="nav navbar text-white w-25">
-                        <li>FB</li>
-                        <li>Insta</li>
-                        <li>Tiktok</li>
+                        <li><i class="fa-brands fa-instagram fa-xl"></i></li>
+                        <li><i class="fa-brands fa-facebook fa-xl"></i></li>
+                        <li><i class="fa-brands fa-tiktok fa-xl"></i></li>
                     </ul>
 
                 </div>
@@ -82,8 +90,12 @@
     </nav>
 
 
+
+
+
     <!-- Bootstrap JS (bundle) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
 
 </html>
